[package]
name = "post"
version = "0.1.0"
authors = ["yao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.1.0", features = ["full"]}
reqwest = {version="0.11", features = ["blocking","json"]}
warp = "0.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"